<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.1.2</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>fr.nil</groupId>
	<artifactId>BackedFlow</artifactId>
	<version>0.5.11</version>
	<name>BackedFlow</name>
	<description>BackedFlow</description>
	<properties>
		<java.version>17</java.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-mail</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-quartz</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>com.mysql</groupId>
			<artifactId>mysql-connector-j</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>io.micrometer</groupId>
			<artifactId>micrometer-registry-prometheus</artifactId>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-api</artifactId>
			<version>0.11.5</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.13.0</version>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-impl</artifactId>
			<version>0.11.5</version>
		</dependency>

		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-jackson</artifactId>
			<version>0.11.5</version>
		</dependency>

		<!--Swagger-->
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
			<version>2.2.0</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.kafka</groupId>
			<artifactId>spring-kafka</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.kafka</groupId>
			<artifactId>spring-kafka-test</artifactId>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.google.cloud.tools</groupId>
				<artifactId>jib-maven-plugin</artifactId>
				<version>3.3.2</version>
				<configuration>
					<allowInsecureRegistries>true</allowInsecureRegistries>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>
						--illegal-access=permit
					</argLine>
					<testFailureIgnore>true</testFailureIgnore>
					<forkCount>2</forkCount>
					<reuseForks>true</reuseForks>
					<argLine>${surefireArgLine}</argLine>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<executions>
					<execution>
						<id>default-prepare-agent</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
						<configuration>
							<destFile>${project.build.directory}/coverage-reports/jacoco.exec</destFile>
							<propertyName>surefireArgLine</propertyName>
                            <excludes>
								<exclude>fr/nil/backedflow/controllers/**</exclude>
								<exclude>fr/nil/backedflow/exceptions/**</exclude>
								<exclude>fr/nil/backedflow/config/**</exclude>
								<exclude>fr/nil/backedflow/auth/**</exclude>
								<exclude>fr/nil/backedflow/entities/**</exclude>
								<exclude>fr/nil/backedflow/event/**</exclude>
								<exclude>fr/nil/backedflow/requests/**</exclude>
								<exclude>fr/nil/backedflow/responses/**</exclude>
								<exclude>fr/nil/backedflow/jobs/**</exclude>
								<exclude>fr/nil/backedflow/stats/**</exclude>
								<exclude>fr/nil/backedflow/services/AuthenticationService**</exclude>
								<exclude>fr/nil/backedflow/services/folder/**</exclude>

							</excludes>
						</configuration>
					</execution>
					<execution>
						<id>default-report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
						<configuration>
							<dataFile>${project.build.directory}/coverage-reports/jacoco.exec</dataFile>
							<outputDirectory>${project.reporting.outputDirectory}/jacoco</outputDirectory>
							<excludes>
								<exclude>fr/nil/backedflow/controllers/**</exclude>
								<exclude>fr/nil/backedflow/exceptions/**</exclude>
								<exclude>fr/nil/backedflow/config/**</exclude>
								<exclude>fr/nil/backedflow/auth/**</exclude>
								<exclude>fr/nil/backedflow/entities/**</exclude>
								<exclude>fr/nil/backedflow/event/**</exclude>
								<exclude>fr/nil/backedflow/requests/**</exclude>
								<exclude>fr/nil/backedflow/responses/**</exclude>
								<exclude>fr/nil/backedflow/jobs/**</exclude>
								<exclude>fr/nil/backedflow/stats/**</exclude>
								<exclude>fr/nil/backedflow/services/AuthenticationService**</exclude>
								<exclude>fr/nil/backedflow/services/folder/**</exclude>

							</excludes>
						</configuration>
					</execution>
					<execution>
						<id>default-check</id>
						<goals>
							<goal>check</goal>
						</goals>

						<configuration>
							<dataFile>${project.build.directory}/coverage-reports/jacoco.exec</dataFile>
							<rules>
								<rule>
									<element>BUNDLE</element>
									<limits>
										<limit>
											<counter>COMPLEXITY</counter>
											<value>COVEREDRATIO</value>
											<minimum>0.20</minimum>
										</limit>
									</limits>
								</rule>
							</rules>
							<excludes>
								<exclude>fr/nil/backedflow/controllers/**</exclude>
								<exclude>fr/nil/backedflow/exceptions/**</exclude>
								<exclude>fr/nil/backedflow/config/**</exclude>
								<exclude>fr/nil/backedflow/auth/**</exclude>
								<exclude>fr/nil/backedflow/entities/**</exclude>
								<exclude>fr/nil/backedflow/event/**</exclude>
								<exclude>fr/nil/backedflow/requests/**</exclude>
								<exclude>fr/nil/backedflow/responses/**</exclude>
								<exclude>fr/nil/backedflow/jobs/**</exclude>
								<exclude>fr/nil/backedflow/stats/**</exclude>
								<exclude>fr/nil/backedflow/services/AuthenticationService**</exclude>
								<exclude>fr/nil/backedflow/services/folder/**</exclude>

							</excludes>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>
